<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aksharspeech.waverecorder.MainActivity" >

    <item
        android:id="@+id/action_alwaysplay"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_alwaysplay"/>
    <item
        android:id="@+id/action_alwaysrecord"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_alwaysrecord"/>
	<item
        android:id="@+id/action_samplerate"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_samplerate"/>
    <item
        android:id="@+id/action_audioencoding"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_audioencoding"/>
    <item
        android:id="@+id/action_gain"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_gain"/>
    
</menu>
