<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/textview1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/back_green"
	android:keepScreenOn="true"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.aksharspeech.waverecorder.SentenceRecordingActivity" >
	<TextView
		android:id="@+id/RcdTVfileArea"
		android:layout_width="wrap_content"
		android:layout_height="125dp"
		android:layout_above="@+id/RcdBtnPlay"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:layout_marginBottom="50dp"
		android:layout_marginTop="15dp"
		android:background="@drawable/border"
		android:text="@string/filearea"
		android:textSize="20sp" />
	<ImageView
		android:id="@+id/RcdBtnPlay"
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:layout_alignRight="@+id/RcdTVfileArea"
		android:layout_alignTop="@+id/RcdBtnRecord"
		android:contentDescription="@string/button5"
		android:onClick="onClickPlay"
		android:src="@drawable/ic_action_playbutton" />
	<Button
		android:id="@+id/RcdBtnPrev"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="80dp"
		android:layout_height="40dp"
		android:layout_alignLeft="@+id/RcdTVfileArea"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="30dp"
		android:background="@color/back2"
		android:onClick="onClickPrev"
		android:text="@string/button4" />
	<Button
		android:id="@+id/RcdBtnNext"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="53dp"
		android:layout_height="40dp"
		android:layout_alignBaseline="@+id/RcdBtnPrev"
		android:layout_alignBottom="@+id/RcdBtnPrev"
		android:layout_marginLeft="11dp"
		android:layout_toRightOf="@+id/RcdBtnPrev"
		android:background="@color/back2"
		android:onClick="onClickNext"
		android:text="@string/button6" />
	<ImageView
		android:id="@+id/RcdBtnRecord"
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:layout_alignTop="@+id/RcdBtnNext"
		android:layout_marginRight="10dp"
		android:layout_toLeftOf="@+id/RcdBtnPlay"
		android:contentDescription="@string/button2"
		android:onClick="startRecording"
		android:src="@drawable/ic_action_recordbutton" />
	<Chronometer
		android:id="@+id/RcdchnoMeter"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/RcdBtnPrev"
		android:layout_alignLeft="@+id/RcdTVfileArea"
		android:layout_marginBottom="25dp"
		android:layout_marginLeft="38dp"
		android:text="@string/chronometer" />
	<CheckBox
		android:onClick="onCBClick"
		android:checked="true"
		android:id="@+id/RcdCBuseGain"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/RcdBtnPlay"
		android:layout_alignRight="@+id/RcdTVfileArea"
		android:text="Gain Enable" />
</RelativeLayout>