<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textview1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/back_green"
    android:keepScreenOn="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aksharspeech.waverecorder.SentenceRecordingActivity" >

    <ImageView
        android:id="@+id/button11"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="102dp"
        android:contentDescription="@string/button2"
        android:onClick="startRecording"
        android:src="@drawable/ic_action_recordbutton" />
    
    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/border"
        android:format="%s"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/button12"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignRight="@+id/chronometer1"
        android:layout_alignTop="@+id/button11"
        android:contentDescription="@string/button5"
        android:src="@drawable/ic_action_playbutton" />

    <ImageView
        android:id="@+id/button14"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignTop="@+id/button11"
        android:layout_toRightOf="@+id/button11"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/button2"
        android:onClick="startRecording"
        android:src="@drawable/ic_action_stopbutton" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/send" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignLeft="@+id/chronometer1"
        android:text="@string/status" />

</RelativeLayout>